--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ minimal_mistakes_skin: "dark"
 
 # Site Author
 author:
-  name             : "Adil Salim"
+  name             : "El Houcine Bergou"
   avatar           : "as.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Member of technical staff at Microsoft"
   location         : "Building 99"
