--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 markdown: kramdown
 remote_theme: "mmistakes/minimal-mistakes"
 
-minimal_mistakes_skin: "dark"
+minimal_mistakes_skin: "aqua"
 
 # Site Author
 author:
